micko.y
%{
  #include <stdio.h>
  #include <stdlib.h>
  #include "defs.h"
  #include "symtab.h"
  #include "codegen.h"

  int yyparse(void);
  int yylex(void);
  int yyerror(char *s);
  void warning(char *s);

  extern int yylineno;
  int out_lin = 0;
  char char_buffer[CHAR_BUFFER_LENGTH];
  int error_count = 0;
  int warning_count = 0;
  int var_num = 0;
  int fun_idx = -1;
  int fcall_idx = -1;
  int lab_num = -1;
  FILE *output;
  
  int array_number = 0;
  int literal_list_count = 0;
  int array_literals[100];
  int array_literals_idx = 0;
%}

%union {
  int i;
  char *s;
  struct exp_vals *vals;
}

%token <i> _TYPE
%token _IF
%token _ELSE
%token _RETURN
%token <s> _ID
%token <s> _INT_NUMBER
%token <s> _UINT_NUMBER
%token _LPAREN
%token _RPAREN
%token _LBRACKET
%token _RBRACKET
%token _ASSIGN
%token _SEMICOLON
%token <i> _AROP
%token <i> _RELOP
%token _LSBRACKET
%token _RSBRACKET
%token _POINTER
%token _FOR
%token _AMPRESAND
%token _INC
%token _COLON

%type <vals> exp num_exp
%type <i> literal 
%type <i> function_call argument rel_exp if_part array_size

%nonassoc ONLY_IF
%nonassoc _ELSE

%%

program
  : function_list
      {  
        if(lookup_symbol("main", FUN) == NO_INDEX)
          err("undefined reference to 'main'");
      }
  ;

function_list
  : function
  | function_list function
  ;

function
  : _TYPE _ID
      {
        fun_idx = lookup_symbol($2, FUN);
        if(fun_idx == NO_INDEX)
          fun_idx = insert_symbol($2, FUN, $1, NO_ATR, NO_ATR);
        else 
          err("redefinition of function '%s'", $2);
        code("\n%s:", $2);
        code("\n\t\tPUSH\t%%14");
        code("\n\t\tMOV \t%%15,%%14");
      }
    _LPAREN parameter _RPAREN body
      {
        clear_symbols(fun_idx + 1);
        var_num = 0;
        
        code("\n@%s_exit:", $2);
        code("\n\t\tMOV \t%%14,%%15");
        code("\n\t\tPOP \t%%14");
        code("\n\t\tRET");
      }
  ;

parameter
  : /* empty */
      { set_atr1(fun_idx, 0); }
  | _TYPE _ID
      {
        insert_symbol($2, PAR, $1, 1, NO_ATR);
        set_atr1(fun_idx, 1);
        set_atr2(fun_idx, $1);
      }
  ;

body
  : _LBRACKET variable_list
      {
        if(var_num)
          code("\n\t\tSUBS\t%%15,$%d,%%15", 4*var_num);
        code("\n@%s_body:", get_name(fun_idx));
      }
    statement_list _RBRACKET
  ;

variable_list
  : /* empty */
  | variable_list variable
  ;

variable
  : _TYPE _ID _SEMICOLON
      {
        if(lookup_symbol($2, VAR|PAR|ARR|PTR) == NO_INDEX)
           insert_symbol($2, VAR, $1, ++var_num, 0);
        else 
           err("redefinition of '%s'", $2);
      }
  | _TYPE _POINTER _ID _SEMICOLON 
	{
		if(lookup_symbol($3, VAR|PAR|ARR|PTR) == NO_INDEX)
			insert_symbol($3, PTR, $1, ++var_num, NO_ATR);
		else 
           err("redefinition of '%s'", $3);	
	}
  | _TYPE _ID array_size _SEMICOLON // Definiton of array
  	  {
        if(lookup_symbol($2, VAR|PAR|ARR|PTR) == NO_INDEX)
		{
			insert_symbol($2, ARR, $1, ++var_num, $3);
            code("\n\t\tSUBS\t %%15,$%d,%%15", 4 * $3);
		}
        else 
           err("redefinition of '%s'", $2);
      }
  | _TYPE _ID _LSBRACKET _RSBRACKET _ASSIGN _LBRACKET elements_list _RBRACKET _SEMICOLON
	  {
        if(lookup_symbol($2, VAR|PAR|ARR|PTR) == NO_INDEX)
		{
			int idx = insert_symbol($2, ARR, $1, ++var_num, literal_list_count);
            code("\n\t\tSUBS\t %%15,$%d,%%15", 4 * literal_list_count);
			for (int i =0; i < literal_list_count; i++) {
				gen_mov_array(array_literals[i], i, idx);
			}			
		}
        else 
           err("redefinition of '%s'", $2);
      }
  ;
  
    
elements_list
  : literal
  {
	array_literals[literal_list_count] = $1;
	literal_list_count += 1;
  }
  | elements_list _COLON literal
  {
	array_literals[literal_list_count] = $3;
	literal_list_count += 1;
  }
  ;

array_size
  : _LSBRACKET _INT_NUMBER _RSBRACKET
  {
	$$ = strtol($2, NULL, 10);
  }
  | _LSBRACKET _UINT_NUMBER _RSBRACKET
  {
	$$ = strtol($2, NULL, 10);
  }
  ;
  
statement_list
  : /* empty */
  | statement_list statement
  ;

statement
  : compound_statement
  | assignment_statement
  | if_statement
  | return_statement
  | for_statement
  ;
  
for_statement
  : _FOR _LPAREN _ID _ASSIGN literal
	{
		$<i>$ = ++lab_num;
		int i = lookup_symbol($3, VAR|PAR);
		if (i == NO_INDEX)
			err("undefined %s", $3);
		gen_mov($5, i);
		code("\n@for%d:", lab_num);
	}  
	_SEMICOLON rel_exp
	{
		code("\n\t\t%s\t@exit%d", opp_jumps[$8], $<i>6);
	}	
	_SEMICOLON _ID _INC _RPAREN statement
	{
		int i = lookup_symbol($11, VAR|PAR);
		if(i == NO_INDEX)
			err("nedeklarisno %s", $11);
		if(get_type(i) == INT)
			code("\n\t\tADDS\t");
		else
			code("\n\t\tADDU\t");
		gen_sym_name(i);
		code(",$1,");
		gen_sym_name(i);
		code("\n\t\tJMP \t@for%d", $<i>6);
		code("\n@exit%d:", $<i>6);
	}
  ;


compound_statement
  : _LBRACKET statement_list _RBRACKET
  ;

assignment_statement
  : _ID _ASSIGN num_exp _SEMICOLON
      {
        int idx = lookup_symbol($1, VAR|PAR);
        if(idx == NO_INDEX)
          err("invalid lvalue '%s' in assignment", $1);
        else
          if(get_type(idx) != get_type($3->index))
            err("incompatible types in assignment");
		if (get_kind($3->index) == ARR)
			gen_mov_array($3->index, $3->value, idx);
		else 
			gen_mov($3->index, idx);
      }
  | _ID array_size _ASSIGN num_exp _SEMICOLON
  {
	int idx = lookup_symbol($1, ARR|PTR);
	if (idx == NO_INDEX)
		err("'%s' is not an array", $1);
	else 
		if (get_type(idx) != get_type($4->index)) 
			err("incompatible types in assignment");
	if (get_kind(idx) != PTR) {
		if ($2 >= get_atr2(idx))
			err("'%s' index out of range", $1);
		gen_mov_array($4->index, $2, idx);
	}
  }
  | _ID _ASSIGN _AMPRESAND _ID _SEMICOLON  {
	int idx1 = lookup_symbol($1, PTR);
	int idx2 = lookup_symbol($4, VAR|PAR|ARR|PTR);
	if (idx1 == NO_INDEX) 
	{
		err("invalid lvalue '%s' in assignment", $1);
	}
	if (idx2 == NO_INDEX)
	{
		err("invalid rvalue '%s' in assignment", $4);
	}
	if (get_type(idx1) != get_type(idx2)) 
		err("incompatible types in assignment");
  }
  ;

num_exp
  : exp
  | num_exp _AROP exp
      {
        if(get_type($1->index) != get_type($3->index))
          err("invalid operands: arithmetic operation");
        int t1 = get_type($1->index);    
        code("\n\t\t%s\t", ar_instructions[$2 + (t1 - 1) * AROP_NUMBER]);
		
		if (get_kind($1->index) == ARR)
			gen_sym_name_array_elem($1->index, $1->value);
		else
			gen_sym_name($1->index);
        code(",");
		if (get_kind($3->index) == ARR)
			gen_sym_name_array_elem($3->index, $3->value);
		else
			gen_sym_name($3->index);
        code(",");
        free_if_reg($3->index);
        free_if_reg($1->index);
		
		struct exp_vals *value = (struct exp_vals*) malloc(sizeof(struct exp_vals));
		value->index = take_reg();
		value->value = -1;
        $$ = value;
		if (get_kind($$->index) == ARR)
			gen_sym_name_array_elem($$->index, -1);
		else 
			gen_sym_name($$->index);
        set_type($$->index, t1);
      }
  ;

exp
  : literal
	  {
	  struct exp_vals *value = (struct exp_vals*) malloc(sizeof(struct exp_vals));
	  value->index = $1;
	  value->value = -1;
	  $$ = value;
	  }
  | _ID array_size
	  {
		int head = lookup_symbol($1, ARR);
		if (head == NO_INDEX)
			err("'%s' undeclared", $1);
		if ($2 >= get_atr2(head))
			err("'%s' index out of range", $1);
		struct exp_vals *value = (struct exp_vals*) malloc(sizeof(struct exp_vals));
		value->index = head;
		value->value = $2;
		$$ = value;
	  }
  | _ID
      {
        int elem = lookup_symbol($1, VAR|PAR|ARR);
        if(elem == NO_INDEX)
          err("'%s' undeclared", $1);
		struct exp_vals *value = (struct exp_vals*) malloc(sizeof(struct exp_vals));
		value->index = elem;
		value->value = -1;
		$$ = value;
      }
  | function_call
      {
        int elem = take_reg();
		struct exp_vals *value = (struct exp_vals*) malloc(sizeof(struct exp_vals));
		value->index = elem;
		value->value = -1;
		$$ = value;
        gen_mov(FUN_REG, elem);
      }
  | _LPAREN num_exp _RPAREN
	  {
		struct exp_vals *value = (struct exp_vals*) malloc(sizeof(struct exp_vals));
		value->index = $2->index;
		value->value = -1;
		$$ = value;
	  }
  | _POINTER _ID
  {
		int idx = lookup_symbol($2, PTR);
		if (idx == NO_INDEX)
          err("'%s' undeclared", $2);
		struct exp_vals *value = (struct exp_vals*) malloc(sizeof(struct exp_vals));
		value->index = idx;
		value->value = -1;
		$$ = value;
  }
  ;

literal
  : _INT_NUMBER
      { $$ = insert_literal($1, INT); }
  | _UINT_NUMBER
      { $$ = insert_literal($1, UINT); }
  ;

function_call
  : _ID 
      {
        fcall_idx = lookup_symbol($1, FUN);
        if(fcall_idx == NO_INDEX)
          err("'%s' is not a function", $1);
      }
    _LPAREN argument _RPAREN
      {
        if(get_atr1(fcall_idx) != $4)
          err("wrong number of arguments");
        code("\n\t\t\tCALL\t%s", get_name(fcall_idx));
        if($4 > 0)
          code("\n\t\t\tADDS\t%%15,$%d,%%15", $4 * 4);
        set_type(FUN_REG, get_type(fcall_idx));
        $$ = FUN_REG;
      }
  ;

argument
  : /* empty */
    { $$ = 0; }

  | num_exp
    { 
      if(get_atr2(fcall_idx) != get_type($1->index))
        err("incompatible type for argument");
      free_if_reg($1->index);
      code("\n\t\t\tPUSH\t");
      gen_sym_name($1->index);
      $$ = 1;
    }
  ;

if_statement
  : if_part %prec ONLY_IF
      { code("\n@exit%d:", $1); }

  | if_part _ELSE statement
      { code("\n@exit%d:", $1); }
  ;

if_part
  : _IF _LPAREN
      {
        $<i>$ = ++lab_num;
        code("\n@if%d:", lab_num);
      }
    rel_exp
      {
        code("\n\t\t%s\t@false%d", opp_jumps[$4], $<i>3);
        code("\n@true%d:", $<i>3);
      }
    _RPAREN statement
      {
        code("\n\t\tJMP \t@exit%d", $<i>3);
        code("\n@false%d:", $<i>3);
        $$ = $<i>3;
      }
  ;

rel_exp
  : num_exp _RELOP num_exp
      {
        if(get_type($1->index) != get_type($3->index))
          err("invalid operands: relational operator");
        $$ = $2 + ((get_type($1->index) - 1) * RELOP_NUMBER);
        gen_cmp($1, $3);
      }
  ;

return_statement
  : _RETURN num_exp _SEMICOLON
      {
        if(get_type(fun_idx) != get_type($2->index)){
          err("incompatible types in return");
		  }
		if(get_kind($2->index) == ARR)
			gen_mov_array($2->index, $2->value, FUN_REG);
		else 
			gen_mov($2->index, FUN_REG);
        code("\n\t\tJMP \t@%s_exit", get_name(fun_idx));        
      }
  ;

%%

int yyerror(char *s) {
  fprintf(stderr, "\nline %d: ERROR: %s", yylineno, s);
  error_count++;
  return 0;
}

void warning(char *s) {
  fprintf(stderr, "\nline %d: WARNING: %s", yylineno, s);
  warning_count++;
}

int main() {
  int synerr;
  init_symtab();
  output = fopen("output.asm", "w+");

  synerr = yyparse();

  clear_symtab();
  fclose(output);
  
  if(warning_count)
    printf("\n%d warning(s).\n", warning_count);

  if(error_count) {
    remove("output.asm");
    printf("\n%d error(s).\n", error_count);
  }

  if(synerr)
    return -1;  //syntax error
  else if(error_count)
    return error_count & 127; //semantic errors
  else if(warning_count)
    return (warning_count & 127) + 127; //warnings
  else
    return 0; //OK
}
